# Connor

./: .env.template  AUTOMATION.md  CLI-USAGE.md  CONNOR_DOCUMENTATION.md  CONNOR_SYSTEM_COMPREHENSIVE_AUDIT.md  FINAL_COMPREHENSIVE_AUDIT_REPORT.md  Makefile  QUICK_START.md  README.md  TROUBLESHOOTING.md  USAGE_EXAMPLE.md  cli.py  comprehensive_benchmark.py  connor_cli.py  connor_config.json  demo_connor.py  dialog_training.py  install.py  launch  launch_connor.py  pyproject.toml  simple_test.py  standalone_test.py  system_audit.py  test_connor.py
.github/workflows/: connor-ci-cd.yml  connor-ci.yml
autogpts/autogpt/: .env.connor  CONNOR_INTEGRATION.md  README_CONNOR.md  __init__.py  connor_autogpt.py  connor_autogpt_demo.py  pyproject.toml  run_connor_autogpt.sh
autogpts/autogpt/autogpt/agent_factory/: configurators.py
autogpts/forge/forge/: agent.py  connor_agent.py
chroma_db/: chroma.sqlite3
connor/: __init__.py
docs/: COMPREHENSIVE_SYSTEM_AUDIT_REPORT.md  SYSTEM_FIXES_AND_OPTIMIZATIONS.md  connor_training_report_20250821_000238.md  connor_training_report_20250821_000340.md
docs/audit_reports/: connor_audit_20250820_232323.json  connor_audit_20250820_232401.json  connor_audit_20250820_232423.json  connor_audit_20250820_232440.json  connor_audit_20250820_232516.json  connor_audit_20250820_235633.json  connor_audit_20250820_235842.json  connor_audit_20250820_235920.json  connor_audit_20250823_152906.json  connor_audit_20250823_153308.json  connor_audit_20250823_153325.json  connor_audit_20250823_153343.json  connor_audit_20250823_153412.json  connor_audit_20250823_153522.json  connor_audit_20250823_153657.json  connor_audit_20250901_021315.json  connor_audit_20250901_021534.json  connor_audit_20250901_021615.json  connor_audit_20250901_022044.json  connor_audit_20250901_023535.json  connor_audit_20250901_023735.json  connor_audit_20250901_023758.json  connor_audit_20250901_023825.json  connor_audit_20250901_023958.json  connor_audit_20250901_024115.json  connor_audit_20250901_024253.json  connor_audit_20250901_025321.json  connor_audit_20250901_025444.json  connor_audit_20250901_025822.json  connor_audit_20250901_040314.json  connor_audit_20250901_040542.json  connor_audit_20250901_041546.json  connor_audit_20250901_041647.json  connor_audit_20250901_041843.json  connor_audit_20250901_042038.json  connor_audit_20250901_042059.json  connor_audit_summary_20250820_232323.md  connor_audit_summary_20250820_232401.md  connor_audit_summary_20250820_232423.md  connor_audit_summary_20250820_232440.md  (+33 more)
docs/benchmark_reports/: connor_benchmark_20250820_232752.json  latest_benchmark_summary.md
models/: connor_dialog_model_20250821_000238.json  latest_connor_model.json  test_results_20250821_000238.json  test_results_20250821_000340.json
scripts/: auto_update.py  deploy.py  monitor.py
tests/: __init__.py  test_cli.py  test_imports.py  test_registry.py
(+18 files in other folders)
