[tool.poetry]
name = "Connor"
version = "1.0.0"
description = "Connor Multi-Agent System - A comprehensive agent-based AI system"
authors = ["Connor Development Team"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "connor"},
    {include = "forge", from = "autogpts/forge"},
    {include = "scripts"}
]

[tool.poetry.scripts]
connor = "cli:main"
connor-cli = "connor_cli:main"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.0.0"
fastapi = "^0.116.0"
litellm = "^1.75.0"
chromadb = "^1.0.0"
python-dotenv = "^1.1.0"
openai = "^1.100.0"
tenacity = "^9.1.0"
sqlalchemy = "^2.0.0"
aiohttp = "^3.12.0"
colorlog = "^6.9.0"
python-multipart = "^0.0.20"
toml = "^0.10.2"
jinja2 = "^3.1.2"
uvicorn = "^0.35.0"
duckduckgo-search = "^8.1.0"
selenium = "^4.35.0"
bs4 = "^0.0.2"
webdriver-manager = "^4.0.2"
google-cloud-storage = "^3.3.0"
pydantic = "^2.11.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"