[tool.poetry]
name = "Connor"
version = "1.0.0"
description = "Connor Multi-Agent System - A comprehensive agent-based AI system"
authors = ["Connor Development Team"]
license = "MIT"
readme = "README.md"
packages = [
    {include = "connor"},
    {include = "forge", from = "autogpts/forge"},
    {include = "scripts"}
]

[tool.poetry.scripts]
connor = "cli:main"
connor-cli = "connor_cli:main"

[tool.poetry.dependencies]
python = "^3.10"
# Core Dependencies
click = "^8.0.0"
fastapi = "^0.116.0"
uvicorn = "^0.35.0"
python-multipart = "^0.0.20"
python-dotenv = "^1.1.0"
pydantic = "^2.11.0"
tenacity = "^9.1.0"
aiohttp = "^3.12.0"
# AI/ML Dependencies
litellm = "^1.75.0"
openai = "^1.100.0"
chromadb = "^1.0.0"
# Data Dependencies
sqlalchemy = "^2.0.0"
# Optional Dependencies (for specific features)
colorlog = { version = "^6.9.0", optional = true }
toml = { version = "^0.10.2", optional = true }
jinja2 = { version = "^3.1.2", optional = true }

[tool.poetry.extras]
logging = ["colorlog"]
config = ["toml"]
templating = ["jinja2"]
full = ["colorlog", "toml", "jinja2"]

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.4.0"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.isort]
profile = "black"